- Update AppointmentMngmtComponent (pending, my appointment, staff appointment) - Update confirmAppointment() and rescheduleAppointment() to handle exceptions - Add AppointmentTableComponent, RescheduleAppointmentComponent, PendingAppointmentComponent, MyAppointmentComponent - Remove feature for user to choose admin when scheduling appointment - Update AppointmentRestController to return AppointmentModel instead of AppointmentBean

--- a/src/app/appointment/appointment-mngmt/appointment-mngmt.component.html
+++ b/src/app/appointment/appointment-mngmt/appointment-mngmt.component.html
@@ -1,176 +1,17 @@
-<app-appointment-schedule></app-appointment-schedule>
+<h4>Appointment</h4>
+<nz-divider></nz-divider>
 
-<ng-template #tableTitle>
-  <nz-row class="mb-4">
-    <nz-col [nzSm]="24" [nzMd]="6">
-      <h4>Appointment</h4>
-    </nz-col>
-    <nz-col [nzSm]="24" [nzMd]="18" class="text-end">
-      <button nz-button (click)="openAppointmentModal()">Schedule Appointment</button>
-    </nz-col>
-  </nz-row>
-  <form nz-form [formGroup]="filterForm">
-    <nz-form-item>
-      <nz-form-label [nzSm]="24" [nzMd]="2" class="fw-bold text-start">ID</nz-form-label>
-      <nz-form-control [nzSm]="24" [nzMd]="4">
-        <input nz-input placeholder="Filter by appointment ID" formControlName="appointmentId" (ngModelChange)="filterByAppointmentId()">
-      </nz-form-control>
-    </nz-form-item>
-  </form>
-</ng-template>
-
-<nz-table #appointmentTable
-          [nzTitle]="tableTitle"
-          [(nzPageIndex)]="pageIndex"
-          [(nzPageSize)]="pageSize"
-          [nzData]="displayData"
-          [nzScroll]="{x: '960px'}"
-          [nzLoading]="isLoading">
-  <thead>
-  <tr>
-    <th nzWidth="80px">No.</th>
-    <th>Appointment Purpose</th>
-    <th nzCustomFilter>
-      Appointment Datetime
-      <nz-filter-trigger [(nzVisible)]="datetimeFilterIsVisible" [nzActive]="selectedDate !== null"
-                         [nzDropdownMenu]="menu">
-        <i nz-icon nzType="search"></i>
-      </nz-filter-trigger>
-    </th>
-    <th [nzFilters]="appointmentStatusColumnItem.listOfFilter" [nzFilterFn]="appointmentStatusColumnItem.filterFn">
-      Appointment Status
-    </th>
-    <th>User</th>
-    <th>Action</th>
-  </tr>
-  </thead>
-  <tbody>
-  <tr *ngFor="let data of appointmentTable.data; let i = index">
-    <td>{{ (pageIndex - 1) * pageSize + i + 1 }}</td>
-    <td>{{data.appointmentPurpose}}</td>
-    <td>{{(data.appointmentStartTime | date: 'short')}} -<br>{{(data.appointmentEndTime | date: 'short')}}</td>
-    <td>
-      <nz-tag *ngIf="data?.appointmentStatus === 'pending_user'" nzColor="gold">Pending User</nz-tag>
-      <nz-tag *ngIf="data?.appointmentStatus === 'pending_admin'" nzColor="gold">Pending Admin</nz-tag>
-      <nz-tag *ngIf="data?.appointmentStatus === 'confirmed'" nzColor="green">Confirmed</nz-tag>
-      <nz-tag *ngIf="data?.appointmentStatus === 'completed'" nzColor="green">Completed</nz-tag>
-      <nz-tag *ngIf="data?.appointmentStatus === 'cancelled'" nzColor="magenta">Cancelled</nz-tag>
-      <span *ngIf="!data?.appointmentStatus">-</span>
-    </td>
-    <td>
-      <a *ngIf="data?.communityUserBean" [routerLink]="'/profile'" [queryParams]="{username: data?.communityUserBean?.username}">{{data?.communityUserBean?.fullName}}</a>
-      <span *ngIf="!data?.communityUserBean">-</span>
-    </td>
-    <td>
-      <button nz-button nz-dropdown [nzDropdownMenu]="actionMenu"
-              *ngIf="data?.appointmentStatus !== 'cancelled'; else noActionTpl">
-        Actions <i nz-icon nzType="down"></i>
-      </button>
-      <nz-dropdown-menu #actionMenu="nzDropdownMenu">
-        <ul nz-menu>
-          <li nz-menu-item
-              *ngIf="(data?.appointmentStatus === 'pending_user' && !isAdmin) || (data?.appointmentStatus === 'pending_admin' && isAdmin)">
-            <a (click)="confirmAppointment(data?.appointmentId)">Confirm Appointment</a>
-          </li>
-          <li nz-menu-item>
-            <a (click)="openDatetimeModal(data?.appointmentId)">Change Appointment Datetime</a>
-          </li>
-          <li nz-menu-item>
-            <a nz-popconfirm nzPopconfirmTitle="Are you sure you want to cancel this appointment?"
-               (nzOnConfirm)="cancelAppointment(data?.appointmentId)">Cancel Appointment</a>
-          </li>
-        </ul>
-      </nz-dropdown-menu>
-    </td>
-  </tr>
-  </tbody>
-</nz-table>
-
-<nz-modal *ngIf="dateTimeModalIsVisible"
-          [nzVisible]="dateTimeModalIsVisible"
-          nzTitle="Change Appointment's Datetime"
-          (nzOnCancel)="cancelChangeDatetime()">
-  <ng-container *nzModalContent>
-    <form nz-form [formGroup]="changeAppointmentDatetimeForm">
-      <nz-form-item>
-        <nz-form-label [nzXs]="24" [nzMd]="8" class="fw-bold">Scheduled Datetime</nz-form-label>
-        <nz-form-control [nzXs]="24" [nzMd]="16">
-          {{ (appointment?.appointmentStartTime | date: 'short') || "-" }}
-          - {{ (appointment?.appointmentEndTime | date: 'short') || "-" }}
-        </nz-form-control>
-      </nz-form-item>
-
-      <nz-form-item>
-        <nz-form-label [nzSpan]="24" class="fw-bold" nzRequired>Date</nz-form-label>
-        <nz-form-control [nzSpan]="24" [nzErrorTip]="dateErrorTpl">
-          <nz-date-picker formControlName="date" (ngModelChange)="initTimeSlotDropdownChoice()" [nzDisabledDate]="disabledDate"></nz-date-picker>
-          <ng-template #dateErrorTpl let-control>
-            <div *ngIf="control.invalid && (control.touched || control.dirty)">
-              <div *ngIf="control.errors?.required">
-                Please select a date!
-              </div>
-            </div>
-          </ng-template>
-        </nz-form-control>
-      </nz-form-item>
-
-      <nz-form-item>
-        <nz-form-label [nzSpan]="24" class="fw-bold" nzRequired>Time</nz-form-label>
-        <nz-form-control [nzSpan]="24" [nzErrorTip]="timeErrorTpl">
-          <nz-select nzAllowClear nzShowSearch formControlName="time" [nzPlaceHolder]="changeAppointmentDatetimeForm.controls['date'].value ? 'Please select a timeslot' : 'Please select a date first'">
-            <nz-option *ngFor="let choice of timeslotList" [nzLabel]="choice?.text" [nzValue]="choice?.value" [nzDisabled]="choice?.disabled"></nz-option>
-          </nz-select>
-          <ng-template #timeErrorTpl let-control>
-            <div *ngIf="control.invalid && (control.touched || control.dirty)">
-              <div *ngIf="control.errors?.required">
-                Please select a time!
-              </div>
-            </div>
-          </ng-template>
-        </nz-form-control>
-      </nz-form-item>
-
-    </form>
-  </ng-container>
-  <div *nzModalFooter>
-    <button nz-button nzType="default" (click)="cancelChangeDatetime()">Cancel</button>
-    <button nz-button nzType="primary" [disabled]="!changeAppointmentDatetimeForm.valid" (click)="changeDatetime()">
-      Update
-    </button>
-  </div>
-</nz-modal>
-
-<nz-modal nzTitle="Schedule New Appointment"
-          (nzOnCancel)="cancelScheduleAppointment()"
-          [nzVisible]="appointmentModalIsVisible">
-  <ng-container *nzModalContent>
-    <app-appointment-form [isAdmin]="isAdmin"
-                          [user]="user"
-                          (formValidityEventEmitter)="formValidityHasChanges($event)"
-                          (isSubmittingEventEmitter)="isSubmittingHasChanges($event)"
-                          (isSubmittedSuccessfullyEventEmitter)="closeModalAndRefreshList($event)"></app-appointment-form>
-  </ng-container>
-  <div *nzModalFooter>
-    <button nz-button nzType="default" (click)="cancelScheduleAppointment()">Cancel</button>
-    <button nz-button nzType="primary" [disabled]="!formIsValid" [nzLoading]="isSubmitting"
-            (click)="scheduleAppointment()">Schedule
-    </button>
-  </div>
-</nz-modal>
-
-<ng-template #noActionTpl>
-  -
-</ng-template>
-
-<nz-dropdown-menu #menu="nzDropdownMenu">
-  <div class="ant-table-filter-dropdown p-2">
-    <div class="search-box">
-      <nz-date-picker [(ngModel)]="selectedDate"></nz-date-picker>
-      <br>
-      <button nz-button nzSize="small" nzType="primary" (click)="filterByAppointmentDate()" class="mt-2 me-2">
-        Search
-      </button>
-      <button nz-button nzSize="small" class="mt-2 me-2" (click)="resetFilterByAppointmentDate()">Reset</button>
+<nz-tabset nzType="card" [(nzSelectedIndex)]="tabIndex">
+  <nz-tab *ngIf="isAdmin || isSuperAdmin" [nzTitle]="'Pending Appointment'">
+    <app-pending-appointment *ngIf="tabIndex === 0"></app-pending-appointment>
+  </nz-tab>
+  <nz-tab [nzTitle]="'My Appointment'">
+    <div *ngIf="((isAdmin || isSuperAdmin) && tabIndex === 1 ) || (!isAdmin && !isSuperAdmin && tabIndex === 0)">
+      <app-appointment-schedule></app-appointment-schedule>
+      <app-my-appointment></app-my-appointment>
     </div>
-  </div>
-</nz-dropdown-menu>
+  </nz-tab>
+  <nz-tab *ngIf="isSuperAdmin" [nzTitle]="'Staff\'s Appointment'">
+
+  </nz-tab>
+</nz-tabset>
