--- a/src/app/assistance/my-assistance/my-assistance.component.html
+++ b/src/app/assistance/my-assistance/my-assistance.component.html
@@ -1,5 +1,5 @@
 <nz-space>
-  <button nz-button *nzSpaceItem nzType="primary" (click)="openFilterDrawer()">Filter Settings</button>
+  <button nz-button *nzSpaceItem nzType="primary" (click)="openFilterDrawer()">Filter</button>
   <button nz-button nzType="default" *nzSpaceItem
           (click)="openAddAssistanceModal()">{{ isAdmin ? 'Add Assistance' : 'Request Assistance'}}
   </button>
@@ -8,7 +8,7 @@
 <br><br>
 
 <nz-drawer
-  nzTitle="Filter Data"
+  nzTitle="Filter Settings"
   [nzVisible]="filterDrawerIsVisible"
   (nzOnClose)="closeFilterDrawer()"
 >
@@ -42,9 +42,10 @@
       <nz-form-item *ngIf="isAdmin">
         <nz-form-label [nzSpan]="24" class="fw-bold">Community User Name</nz-form-label>
         <nz-form-control [nzSpan]="24">
-          <nz-select formControlName="username">
-            <nz-option *ngFor="let choice of USERNAME_DROPDOWN_LIST" [nzLabel]="choice.text"
-                       [nzValue]="choice.value"></nz-option>
+          <nz-select nzAllowClear nzShowSearch formControlName="username">
+            <nz-option class="h-100" *ngFor="let choice of USERNAME_DROPDOWN_LIST" [nzLabel]="choice?.text" [nzValue]="choice.value" [nzCustomContent]="true">
+              <span class="full-nz-option-label">{{choice?.text}}</span>
+            </nz-option>
           </nz-select>
         </nz-form-control>
       </nz-form-item>
