--- a/src/app/homepage/about/about.component.html
+++ b/src/app/homepage/about/about.component.html
@@ -1,40 +1,23 @@
-<h2 nz-typography>Health Support System (HSS)</h2>
+<h4 nz-typography>Aulong Community Service Centre</h4>
 <nz-divider></nz-divider>
 
-<p nz-typography>
-  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
-  aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-  Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
-  occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-</p>
+<nz-descriptions nzLayout="vertical" nzBordered [nzColumn]="{ xxl: 1, xl: 1, lg: 1, md: 1, sm: 1, xs: 1 }">
+  <nz-descriptions-item nzTitle="Address">
+    <p nz-typography>306, Jalan Taman Pertama 7, Taman Pertama, 34000 Taiping, Perak.</p>
+    <div class="mb-2">
+      <iframe
+        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1181.929146979928!2d100.72163444399717!3d4.852152166286169!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x31caaf17cb91d5f3%3A0xbab9e70b8f1e5c24!2sPusat%20Khidmat%20Ahli%20Parlimen%20Taiping%20%26%20Adun%20Aulong!5e0!3m2!1sen!2smy!4v1621451882550!5m2!1sen!2smy"
+        width="100%" height="auto" style="border:0;" allowfullscreen="" loading="lazy">
+      </iframe>
+    </div>
+  </nz-descriptions-item>
 
-<form nz-form>
-  <nz-form-item>
-    <nz-form-label [nzSm]="24" [nzMd]="7" class="fw-bold">Address</nz-form-label>
-    <nz-form-control [nzSm]="24" [nzMd]="16">
-      <span>306, Jalan Taman Pertama 7, Taman Pertama, 34000 Taiping, Perak.</span>
-      <div class="mb-2">
-        <iframe
-          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1181.929146979928!2d100.72163444399717!3d4.852152166286169!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x31caaf17cb91d5f3%3A0xbab9e70b8f1e5c24!2sPusat%20Khidmat%20Ahli%20Parlimen%20Taiping%20%26%20Adun%20Aulong!5e0!3m2!1sen!2smy!4v1621451882550!5m2!1sen!2smy"
-          width="100%" height="auto" style="border:0;" allowfullscreen="" loading="lazy">
-        </iframe>
-      </div>
-    </nz-form-control>
-  </nz-form-item>
+  <nz-descriptions-item nzTitle="Working Hour">
+    <p nz-typography>MON - FRI : 9:15 AM - 4:45 PM</p>
+    <p nz-typography>Our centre is closed on Saturday, Sunday and public holiday.</p>
+  </nz-descriptions-item>
 
-  <nz-form-item>
-    <nz-form-label [nzSm]="24" [nzMd]="7" class="fw-bold">Working Hours</nz-form-label>
-    <nz-form-control [nzSm]="24" [nzMd]="16">
-    <span>
-      MON - FRI : 9:15 AM - 4:45PM<br>Our centre is closed on Saturday, Sunday and public holiday.
-    </span>
-    </nz-form-control>
-  </nz-form-item>
-
-  <nz-form-item>
-    <nz-form-label [nzSm]="24" [nzMd]="7" class="fw-bold">Contact Number</nz-form-label>
-    <nz-form-control [nzSm]="24" [nzMd]="16">
-      <span>05-805 4564</span>
-    </nz-form-control>
-  </nz-form-item>
-</form>
+  <nz-descriptions-item nzTitle="Contact Number">
+    <span>05-805 4564</span>
+  </nz-descriptions-item>
+</nz-descriptions>
