--- a/src/app/profile/user-profile/user-profile.component.html
+++ b/src/app/profile/user-profile/user-profile.component.html
@@ -233,32 +233,55 @@
     <br>
 
     <p class="fw-bold">Health</p>
-    <nz-table #healthTable
-              [(nzPageIndex)]="pageIndex"
-              [(nzPageSize)]="pageSize"
-              [nzData]="userProfile?.healthModelList"
-              [nzScroll]="{x: '960px'}">
-      <thead>
-      <tr>
-        <th nzWidth="150px">Disease Name</th>
-        <th nzWidth="500px">Description</th>
-      </tr>
-      </thead>
-      <tbody>
-      <tr *ngFor="let data of healthTable.data; let i = index">
-        <td>
-          <div class="d-flex align-items-center">
-            <span>{{data?.diseaseName || '-'}}</span>
-            <i nz-icon nzType="check-circle" nzTheme="outline" class="ms-2" *ngIf="data?.approvedBy && data?.approvedDate"></i>
+    <ng-container *ngIf="isEdit; else displayHealthTableTpl">
+      <nz-row>
+        <nz-col [nzSpan]="24">
+          <button nz-button class="float-end" nzType="primary" (click)="addDiseaseFormGroup()">Add Disease</button>
+        </nz-col>
+      </nz-row>
+      <div formGroupName="health">
+        <div formArrayName="diseaseList">
+          <div *ngFor="let disease of diseaseList.controls; let i = index" class="mb-4">
+            <div [formGroupName]="i">
+              <nz-form-item>
+                <nz-form-label class="fw-bold" [nzSpan]="24">Disease {{i + 1}} Name</nz-form-label>
+                <nz-form-control [nzSpan]="24">
+                  <nz-select formControlName="diseaseId">
+                    <nz-option *ngFor="let option of diseaseDropdownList" [nzValue]="option.value"
+                               [nzLabel]="option.text"></nz-option>
+                  </nz-select>
+                </nz-form-control>
+              </nz-form-item>
+
+              <nz-form-item>
+                <nz-form-label class="fw-bold" [nzSpan]="24">Disease {{i + 1}} Description</nz-form-label>
+                <nz-form-control [nzSpan]="24">
+                  <textarea rows="4" nz-input formControlName="description"></textarea>
+                </nz-form-control>
+              </nz-form-item>
+
+              <nz-form-item>
+                <nz-form-control [nzSpan]="24">
+                  <label nz-checkbox formControlName="isApproved">Approve disease {{i+1}}</label>
+                </nz-form-control>
+              </nz-form-item>
+
+              <nz-row>
+                <nz-col [nzSpan]="24">
+                  <button class="float-end" nz-button nzDanger (click)="deleteDiseaseFormGroup(i)">Remove
+                    Disease {{i + 1}}</button>
+                </nz-col>
+              </nz-row>
+            </div>
           </div>
-        </td>
-        <td>{{data?.diseaseDescription || '-'}}</td>
-      </tr>
-      </tbody>
-    </nz-table>
+        </div>
+      </div>
+    </ng-container>
 
     <nz-space *ngIf="isEdit">
-      <button nz-button nzType="primary" [disabled]="!userProfileForm.valid" *nzSpaceItem (click)="updateProfile()">Update</button>
+      <button nz-button nzType="primary" [disabled]="!userProfileForm.valid" *nzSpaceItem (click)="updateProfile()">
+        Update
+      </button>
       <button nz-button nzType="default" *nzSpaceItem (click)="exitEditMode()">Cancel</button>
     </nz-space>
   </form>
@@ -280,6 +303,35 @@
     </li>
   </ul>
 </nz-dropdown-menu>
+
+<ng-template #displayHealthTableTpl>
+  <nz-table #healthTable
+            [(nzPageIndex)]="pageIndex"
+            [(nzPageSize)]="pageSize"
+            [nzData]="userProfile?.healthModelList"
+            [nzScroll]="{x: '960px'}">
+    <thead>
+    <tr>
+      <th nzWidth="150px">Disease Name</th>
+      <th nzWidth="500px">Description</th>
+    </tr>
+    </thead>
+    <tbody>
+    <tr *ngFor="let data of healthTable.data; let i = index">
+      <td>
+        <div class="d-flex align-items-center">
+          <span>{{data?.diseaseName || '-'}}</span>
+          <i nz-icon nzType="check-circle" nzTheme="outline" class="ms-2" *ngIf="data?.approvedBy && data?.approvedDate"
+             nz-popover
+             nzPopoverTitle="Validated"
+             [nzPopoverContent]="'Validated by '  + (data?.approvedBy || '-') + ' on ' + ((data?.approvedDate | date: NZ_DATE_FORMAT) || '-')"></i>
+        </div>
+      </td>
+      <td>{{data?.diseaseDescription || '-'}}</td>
+    </tr>
+    </tbody>
+  </nz-table>
+</ng-template>
 
 <ng-template #accountNotActivatedTemplate>
   <p nz-typography>Account details are provided by the user and has not been verified.<br> Please verify the details
